@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2012-01-06 (SVN):
+    * mid2strm.c (ConverterInit): Add support for Microsoft RMID format.
+    * timidity/readmidi.c (read_midi_file): Likewise.
+
+2012-01-06 (SVN):
     * midifile.h: Added magic constant for Microsoft RMID (*.rmi) files.
 
 2012-01-06 (SVN):
